# innovation_station

./: .gitignore  Makefile  README.md  hashes.txt  open_api_3_spec.yaml  package-lock.json  package.json  readme.md  svelte.config.js
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.3b9e244d.css  LinkButton.00b16663.css  _page.29d97e7c.css
.svelte-kit/output/client/_app/immutable/chunks/: 0.c4ac5566.js  LinkButton.ce190434.js  ProgressBar.svelte_svelte_type_style_lang.797fb494.js  api.b700e51a.js  ccip.d3ce3fa7.js  events.3c6e9eb7.js  index.2941eece.js  index.55c88adb.js  index.854a7326.js  index.91945a29.js  index.dcfd4ecf.js  index.es.f8b2c498.js  scheduler.08130eb6.js  singletons.22ea729c.js  stores.e77d4b23.js
.svelte-kit/output/client/_app/immutable/entry/: app.0c08084e.js  start.0ef4e9c9.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.a9bdaf5b.js  1.b20cd96f.js  2.0b15a326.js  3.0f1b2f0e.js  4.91242f60.js
.svelte-kit/output/server/: index.js  manifest-full.js
.svelte-kit/output/server/_app/immutable/assets/: _layout.3b9e244d.css  _page.c55c4bdc.css
.svelte-kit/output/server/chunks/: LinkButton.js  ProgressBar.svelte_svelte_type_style_lang.js  api.js  internal.js  ssr.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/entries/pages/market/: _page.svelte.js
.svelte-kit/output/server/entries/pages/studio/: _page.svelte.js  _page.ts.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/market/: $types.d.ts
.svelte-kit/types/src/routes/studio/: $types.d.ts
docs/: .dockerignore  Dockerfile  Makefile  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/blog/: index.md
docs/docs/blog/posts/: 01.md
frontend/: hashes.txt  package-lock.json  package.json  readme.md  vite.config.ts
frontend/src/: app.d.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/lib/: api.ts  config.ts  utils.ts
frontend/src/lib/abis/: registriesManager.ts
frontend/src/lib/actions/: fetchNoun.ts  getByPromptId.ts  mintComponent.ts  postPropmpt.ts
frontend/src/lib/components/: ActionButton.svelte  BuildForm.svelte  ComponentsList.svelte  Error.svelte  FirstStep.svelte  FormWrap.svelte  ImageUploader.svelte  MintForm.svelte  PromptForm.svelte  Studio.svelte
frontend/src/lib/views/: Market.svelte  Studio.svelte
frontend/src/routes/: +page.svelte
mas/: .Makefile.swp  .env  .gitignore  Makefile  pyproject.toml  readme.md
mas/.github/workflows/: dev.yml
mas/mints/: 0.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  mapping.txt
mas/scripts/: run_single_agent.sh  start_mas.sh
scripts/: convert_from_spec_to_handler.py
src/lib/: api.ts  stores.ts  types.d.ts  utils.ts
src/lib/abis/: componentRegistry.ts
src/lib/actions/: getByPromptId.ts  mintComponent.ts  postPropmpt.ts
src/lib/components/: Card.svelte  ComponentsList.svelte  Details.svelte  Info.svelte  LinkButton.svelte  Share.svelte  Studio.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/routes/market/: +page.svelte  +page.ts
src/routes/studio/: +page.svelte  +page.ts
