[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["8baller <tomrae030@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.4.2"}


[tool.poetry.group.dev.dependencies]
bandit = "==1.6.2"
black = "==19.10b0"
flake8 = "==3.7.9"
flake8-bugbear = "==20.1.4"
flake8-docstrings = "==1.5.0"
flake8-eradicate = "==0.4.0"
flake8-isort = "==4.0.0"
mypy = "==0.761"
pydocstyle = "==3.0.0"
pylint = "==2.6.0"
pymdown-extensions = ">=6.3"
isort = "==5.5.2"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
